# relevancy

./: .gitignore  AGENTS.md  MANUAL_STEPS_FINAL.md  PRD.md  README.md  SKILL.md  manual-start.md  oracle-manual-steps.md  pyproject.toml  reserve_oracle.sh
.github/workflows/: deploy.yml
backend/: .env.example  pyproject.toml
backend/app/: config.py  database.py  embeddings.py  main.py
backend/app/api/: match.py  sync.py  upload.py
backend/app/services/: chunker.py  document_parser.py  matcher.py  search.py
backend/tests/: test_api.py  test_chunker.py  test_document_parser.py  test_sync.py
backend/tests/fixtures/: dry_run_sync_script.py
deploy/: nginx.conf  relevancy.service  setup.sh
frontend/: .env.example  .env.production  index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css  types.ts
frontend/src/components/: CardList.tsx  (+10 more)
scripts/: dev_setup.sh  precompute_embeddings.py  requirements.txt  upload_to_supabase.py  verify_supabase.sql
sql/: migration_v2_biolord.sql  migration_v3_async.sql  schema.sql
tests/: deployed-test-report.md  local-test-report.md  test_backend_live.py  test_frontend_live.py
todo/: 00-overview.md  01-project-scaffolding.md  02-anki-parser-package.md  03-precompute-embeddings.md  04-database-schema.md  05-backend-core.md  06-document-parsing.md  07-upload-and-match-api.md  08-anki-sync-api.md  09-frontend-setup.md  10-frontend-results-slider.md  11-frontend-anki-sync.md  12-integration-testing.md  12b-local-test-agent.md  13-deploy-supabase.md  14-deploy-oracle-cloud.md  15-deployed-test-agent.md
(+1 files in other folders)
